para added in index file

--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>Welcome to Git-tutorial of shaun peiling</h1>
+    <p>Lorem ipsum dolor sit amet.
+        Lorem ipsum dolor sit amet.
+    </p>
 </body>
 </html>
